registration and make tiles

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -191,7 +191,8 @@
    },
    "outputs": [],
    "source": [
-    "!python test.py --dataroot datasets/horse2zebra/testA --name horse2zebra_pretrained --model test --no_dropout"
+    "!python test.py --dataroot datasets/horse2zebra/testA --name horse2zebra_pretrained --model test --no_dropout\n",
+    "python test.py --dataroot /well/rittscher/users/qdv200/MPN/processed_CALR_IHC_megs/registered_CALR_segs/ihc2he/testA --name ihc2he --model test --no_dropout --num_test 2000"
    ]
   },
   {
@@ -265,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2 (default, Nov  4 2020, 21:23:28) \n[Clang 12.0.0 (clang-1200.0.32.28)]"
+   "version": "3.6.8 (default, Nov 16 2020, 16:55:22) \n[GCC 4.8.5 20150623 (Red Hat 4.8.5-44)]"
   },
   "vscode": {
    "interpreter": {
