--- a/CycleGAN_training.ipynb
+++ b/CycleGAN_training.ipynb
@@ -38,7 +38,8 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.16 (default, Mar  2 2023, 03:21:46) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
