--- a/CycleGAN_training.ipynb
+++ b/CycleGAN_training.ipynb
@@ -29,6 +29,24 @@
    "source": [
     "!python train.py --dataroot /well/rittscher/users/qdv200/MPN/processed_CALR_IHC_megs/registered_CALR_segs/ihc2he --name ihc2he --model cycle_gan --display_id -1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python train.py --dataroot /well/rittscher/users/qdv200/MPN/GAN_tiles/ihc2he --name ihc2he --model cycle_gan --gpu_ids 0,1,2,3 --batch_size 128 --display_id -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python test.py --dataroot datasets/horse2zebra/testA --name horse2zebra_pretrained --model test --no_dropout"
+   ]
   }
  ],
  "metadata": {
