--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -192,7 +192,8 @@
    "outputs": [],
    "source": [
     "!python test.py --dataroot datasets/horse2zebra/testA --name horse2zebra_pretrained --model test --no_dropout\n",
-    "python test.py --dataroot /well/rittscher/users/qdv200/MPN/processed_CALR_IHC_megs/registered_CALR_segs/ihc2he/testA --name ihc2he --model test --no_dropout --num_test 2000"
+    "python test.py --dataroot /well/rittscher/users/qdv200/MPN/processed_CALR_IHC_megs/registered_CALR_segs/ihc2he/testA --name ihc2he --model test --no_dropout --num_test 2000\n",
+    "python test.py --dataroot /well/rittscher/users/qdv200/MPN/GAN_tiles/ihc2he/testA --name ihc2he --model test --no_dropout --num_test 4800\n"
    ]
   },
   {
@@ -252,7 +253,7 @@
    "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-3:m74"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch-CycleGAN-and-pix2pix",
    "language": "python",
    "name": "python3"
   },
@@ -266,11 +267,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8 (default, Nov 16 2020, 16:55:22) \n[GCC 4.8.5 20150623 (Red Hat 4.8.5-44)]"
+   "version": "3.8.16 (default, Mar  2 2023, 03:21:46) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "4afce75d3344a2b3408208d6e366824ea34e084accceec91470cc3eaf1e0734d"
    }
   }
  },
