attempts to retrain and resize test

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -197,6 +197,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python test.py --dataroot /well/rittscher/users/qdv200/MPN/GAN_tiles/ihc2he/testA --name ihc2he --model test --no_dropout --num_test 4800"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
